Fix menu overlap issue on Create Quiz page

--- a/front-end/src/routes/create-quiz/create-quiz.scss
+++ b/front-end/src/routes/create-quiz/create-quiz.scss
@@ -68,4 +68,12 @@
 }
 .mt-8 {
     margin-top: 8rem;
+
+    @media (min-width: map-get($grid-breakpoints, md)) {
+        margin: top 16rem;
+    }
+
+    @media (min-width: map-get($grid-breakpoints, lg)) {
+        margin: top 16rem;
+    }
 }
